# KiParse

./: CHANGELOG.md  Cargo.toml  KNOWN_ISSUES.md  PUBLISH_CHECKLIST.md  README.md
.github/workflows/: rust.yml
assets/: example_components.kicad_sym
examples/: README.md  basic.rs  basic_usage.rs  get_3d_models.rs  get_details.rs  get_layers.rs  get_positions.rs  get_symbols.rs  layer_extraction.rs  symbol_parser.rs  two_stage_parsing.rs
src/: Atlantix_Components.kicad_sym  error.rs  lib.rs  main.rs  prelude.rs
src/pcb/: detail_parser.rs  mod.rs  pcb_parser.rs  simple_parser.rs  types.rs
src/symbol/: mod.rs  symbol_parser.rs  types.rs
