[package]
name = "kiparse"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"
authors = ["James Bonanno <atlantix-eda@proton.me>"]
description = "A practical KiCad file format parser for PCB layer extraction and symbol parsing"
license = "MIT"
repository = "https://github.com/saturn77/KiParse"
readme = "README.md"
keywords = ["kicad", "pcb", "eda", "parser", "electronics"]
categories = ["parsing", "science", "simulation"]

[lib]
name = "kiparse"
path = "src/lib.rs"

[[bin]]
name = "kpx"
path = "src/bin/cli.rs"
required-features = ["cli"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "get_layers"
path = "examples/get_layers.rs"

[[example]]
name = "get_symbols"
path = "examples/get_symbols.rs"

[[example]]
name = "get_positions"
path = "examples/get_positions.rs"

[[example]]
name = "get_details"
path = "examples/get_details.rs"

[[example]]
name = "get_3d_models"
path = "examples/get_3d_models.rs"

[dependencies]
logos = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
regex = "1.10"

# Optional CLI dependencies
clap = { version = "4.5", features = ["derive"], optional = true }
prettytable = { version = "0.10.0", optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
cli = ["clap", "prettytable", "serde_json"]
json = ["serde_json"]

[package.metadata.docs.rs]
all-features = true